# library_service/docs/swagger.yaml
@@ -25,23 +25,8 @@ definitions:
         type: integer
       book_title:
         type: string
-      createdAt:
-        description: '`json:"created_at"`'
-        type: string
-      id:
-        type: integer
       reader_id:
         type: integer
-      returnedAt:
-        description: '`json:"returned_at"`'
-        type: string
-      takenAt:
-        description: '`json:"taken_at"`'
-        type: string
-      transactionID:
-        type: integer
-      updatedAt:
-        type: string
     type: object
   model.BookRentSummary:
     properties:
@@ -56,16 +41,8 @@ definitions:
     properties:
       book_id:
         type: integer
-      createdAt:
-        type: string
       reader_id:
         type: integer
-      takenAt:
-        type: string
-      transactionID:
-        type: integer
-      updatedAt:
-        type: string
     type: object
   model.Login:
     properties:
@@ -180,13 +157,6 @@ paths:
       consumes:
       - application/json
       description: Lists of borrowed books with income
-      parameters:
-      - description: List of borrowed books with income
-        in: body
-        name: input
-        required: true
-        schema:
-          $ref: '#/definitions/model.BookRentSummary'
       produces:
       - application/json
       responses:
@@ -306,6 +276,12 @@ paths:
         name: id
         required: true
         type: integer
+      - description: Create account
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/model.Login'
       produces:
       - application/json
       responses:
