# library_service/internal/model/books_reader.go
@@ -3,22 +3,22 @@ package model
 import "time"
 
 type CreateBookReader struct {
-	BookID        uint `json:"book_id" gorm:"column:book_id"`
-	ReaderID      uint `json:"reader_id" gorm:"column:reader_id"`
-	TransactionID uint
-	TakenAt       time.Time
-	CreatedAt     time.Time
-	UpdatedAt     time.Time
+	BookID        uint      `json:"book_id" gorm:"column:book_id"`
+	ReaderID      uint      `json:"reader_id" gorm:"column:reader_id"`
+	TransactionID uint      `swaggerignore:"true"`
+	TakenAt       time.Time ` swaggerignore:"true"`
+	CreatedAt     time.Time ` swaggerignore:"true"`
+	UpdatedAt     time.Time ` swaggerignore:"true"`
 }
 
 type BookReader struct {
-	ID            uint
-	BookID        uint `json:"book_id" gorm:"column:book_id"`
-	ReaderID      uint `json:"reader_id" gorm:"column:reader_id"`
-	TransactionID uint
+	ID            uint      `swaggerignore:"true"`
+	BookID        uint      `json:"book_id" gorm:"column:book_id"`
+	ReaderID      uint      `json:"reader_id" gorm:"column:reader_id"`
+	TransactionID uint      `swaggerignore:"true"`
 	BookTitle     string    `json:"book_title" gorm:"column:book_title"`
-	TakenAt       time.Time //`json:"taken_at"`
-	ReturnedAt    time.Time //`json:"returned_at"`
-	CreatedAt     time.Time //`json:"created_at"`
-	UpdatedAt     time.Time
+	TakenAt       time.Time `swaggerignore:"true"`
+	ReturnedAt    time.Time `swaggerignore:"true"`
+	CreatedAt     time.Time `swaggerignore:"true"`
+	UpdatedAt     time.Time `swaggerignore:"true"`
 }
